test/fails/bad_tags/assign1.lgl
tag a is vec2;

a x = [1., 2.]:vec2; // No downcasting!